force-app/main/default/objects/stripeGC__Stripe_Webhook_Endpoint__c/stripeGC__Stripe_Webhook_Endpoint__c.object-meta.xml
<CustomObject>
    <label>Stripe Webhook Endpoint</label>
    <nameField>
        <displayFormat>SWE-{000000}</displayFormat>
        <label>Stripe Webhook Endpoint Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stripe Webhook Endpoints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>