force-app/main/default/objects/stripeGC__Stripe_Webhook_Endpoint__c/fields/stripeGC__Enabled_Webhook_Events__c.field-meta.xml
<CustomField>
    <fullName>stripeGC__Enabled_Webhook_Events__c</fullName>
    <label>Enabled Webhook Events</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>