force-app/main/default/objects/stripeGC__Stripe_Webhook_Endpoint__c/fields/stripeGC__Status__c.field-meta.xml
<CustomField>
    <fullName>stripeGC__Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>