force-app/main/default/objects/stripeGC__Stripe_Webhook_Endpoint__c/fields/stripeGC__Type__c.field-meta.xml
<CustomField>
    <fullName>stripeGC__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Connect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>