force-app/main/default/objects/stripeGC__Stripe_Webhook_Endpoint__c/fields/stripeGC__Webhook_Endpoint_ID__c.field-meta.xml
<CustomField>
    <fullName>stripeGC__Webhook_Endpoint_ID__c</fullName>
    <label>Webhook Endpoint ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>